feat(api): add missing attrs
